spacing issuses fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,6 +420,7 @@ img {
   padding: 50px 15px;
   border-radius: 10px;
   width: 100%;
+  height: 100%;
   text-align: center;
   transition: all 0.3s ease;
 }
